--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -68,50 +68,36 @@
 	│   ├── <a href="././S04-Cercle/21.2.Flammant-rose-a-remplir.pdf">21.2.Flammant-rose-a-remplir.pdf</a><br>
 	│   ├── <a href="././S04-Cercle/DS-1-Cercle.odg">DS-1-Cercle.odg</a><br>
 	│   └── <a href="././S04-Cercle/DS-1-Cercle.pdf">DS-1-Cercle.pdf</a><br>
-	├── <a href="././S05-Positions-relatives-de-droites/">S05-Positions-relatives-de-droites</a><br>
-	│   ├── <a href="././S05-Positions-relatives-de-droites/01.FM-6-S09.pdf">01.FM-6-S09.pdf</a><br>
-	│   ├── <a href="././S05-Positions-relatives-de-droites/6_E06_Droites_paralleles_perpendiculaires.pdf">6_E06_Droites_paralleles_perpendiculaires.pdf</a><br>
-	│   ├── <a href="././S05-Positions-relatives-de-droites/Activit%FFFFFFC3%FFFFFFA9_1_construction_para_perp.pdf">Activité_1_construction_para_perp.pdf</a><br>
-	│   ├── <a href="././S05-Positions-relatives-de-droites/Activit%FFFFFFC3%FFFFFFA9_2_construction_para_perp.pdf">Activité_2_construction_para_perp.pdf</a><br>
-	│   ├── <a href="././S05-Positions-relatives-de-droites/exercice-suppl%FFFFFFC3%FFFFFFA9mentaires-paralleles-perpendiculaires.pdf">exercice-supplémentaires-paralleles-perpendiculaires.pdf</a><br>
-	│   ├── <a href="././S05-Positions-relatives-de-droites/FA1-6-S09-definitions.pdf">FA1-6-S09-definitions.pdf</a><br>
-	│   ├── <a href="././S05-Positions-relatives-de-droites/FA2-6-S09-constructions-1.pdf">FA2-6-S09-constructions-1.pdf</a><br>
-	│   ├── <a href="././S05-Positions-relatives-de-droites/FA3-6-S09-mediatrice.pdf">FA3-6-S09-mediatrice.pdf</a><br>
-	│   └── <a href="././S05-Positions-relatives-de-droites/FA4-6-S09-triangle-rectangle.pdf">FA4-6-S09-triangle-rectangle.pdf</a><br>
-	├── <a href="././S06-Perimetres-Aires/">S06-Perimetres-Aires</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Cours-S06-Perimetres.pdf">Cours-S06-Perimetres.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_01.pdf">Ex-1a-Conversions_01.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_02.pdf">Ex-1a-Conversions_02.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_03.pdf">Ex-1a-Conversions_03.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_04.pdf">Ex-1a-Conversions_04.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions_05.pdf">Ex-1a-Conversions_05.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-1a-Conversions.pdf">Ex-1a-Conversions.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-2a-S06-Duree.pdf">Ex-2a-S06-Duree.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-3a-S06-Perimetres.pdf">Ex-3a-S06-Perimetres.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-3b-S06-Perimetres-formules.pdf">Ex-3b-S06-Perimetres-formules.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-3c-S06-Perimetres-formules.pdf">Ex-3c-S06-Perimetres-formules.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-3d-S06-Perimetres-formules.pdf">Ex-3d-S06-Perimetres-formules.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-4a-S06-Aires.pdf">Ex-4a-S06-Aires.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-4b-S06-Aires-Figures.pdf">Ex-4b-S06-Aires-Figures.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-4c-S06-Aires-Figures.pdf">Ex-4c-S06-Aires-Figures.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-5a-S06-Aires.pdf">Ex-5a-S06-Aires.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-5b-S06-Aires.pdf">Ex-5b-S06-Aires.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-6a-S06-Aires-Formules.pdf">Ex-6a-S06-Aires-Formules.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-6b-S06-Aires-Formules.pdf">Ex-6b-S06-Aires-Formules.pdf</a><br>
-	│   ├── <a href="././S06-Perimetres-Aires/Ex-6c-S06-Aires-Formules.pdf">Ex-6c-S06-Aires-Formules.pdf</a><br>
-	│   └── <a href="././S06-Perimetres-Aires/Ex-6d-S06-Aires-Formules.pdf">Ex-6d-S06-Aires-Formules.pdf</a><br>
-	├── <a href="././S07-Multiplications-Divisions/">S07-Multiplications-Divisions</a><br>
-	│   ├── <a href="././S07-Multiplications-Divisions/mathsenligne/">mathsenligne</a><br>
-	│   ├── <a href="././S07-Multiplications-Divisions/Cours-S07-Multiplications-Divisions.pdf">Cours-S07-Multiplications-Divisions.pdf</a><br>
-	│   ├── <a href="././S07-Multiplications-Divisions/DS-1-S07-Multiplication-Division.pdf">DS-1-S07-Multiplication-Division.pdf</a><br>
-	│   ├── <a href="././S07-Multiplications-Divisions/Ex-1a-S07-Tables-de-multiplications.pdf">Ex-1a-S07-Tables-de-multiplications.pdf</a><br>
-	│   ├── <a href="././S07-Multiplications-Divisions/Ex-1a-S07-Tables-de-multiplications-v2.pdf">Ex-1a-S07-Tables-de-multiplications-v2.pdf</a><br>
-	│   ├── <a href="././S07-Multiplications-Divisions/Ex-1b-S07-Tables-de-multiplications.pdf">Ex-1b-S07-Tables-de-multiplications.pdf</a><br>
-	│   ├── <a href="././S07-Multiplications-Divisions/Ex-2a-S07-Multiplication-posee.pdf">Ex-2a-S07-Multiplication-posee.pdf</a><br>
-	│   ├── <a href="././S07-Multiplications-Divisions/Ex-3a-S07-Divisons.pdf">Ex-3a-S07-Divisons.pdf</a><br>
-	│   ├── <a href="././S07-Multiplications-Divisions/Ex-4a-S07-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-4a-S07-Problèmes.pdf</a><br>
-	│   ├── <a href="././S07-Multiplications-Divisions/ex-division-decimales_01.pdf">ex-division-decimales_01.pdf</a><br>
-	│   └── <a href="././S07-Multiplications-Divisions/pblm-6-div.pdf">pblm-6-div.pdf</a><br>
+	├── <a href="././S05-Multiplications-Entieres/">S05-Multiplications-Entieres</a><br>
+	│   ├── <a href="././S05-Multiplications-Entieres/mathsenligne/">mathsenligne</a><br>
+	│   ├── <a href="././S05-Multiplications-Entieres/Cours-S07-Multiplications-Divisions.pdf">Cours-S07-Multiplications-Divisions.pdf</a><br>
+	│   ├── <a href="././S05-Multiplications-Entieres/DS-1-S07-Multiplication-Division.pdf">DS-1-S07-Multiplication-Division.pdf</a><br>
+	│   ├── <a href="././S05-Multiplications-Entieres/Ex-1a-S07-Tables-de-multiplications-v2.pdf">Ex-1a-S07-Tables-de-multiplications-v2.pdf</a><br>
+	│   ├── <a href="././S05-Multiplications-Entieres/Ex-1b-S07-Tables-de-multiplications.pdf">Ex-1b-S07-Tables-de-multiplications.pdf</a><br>
+	│   ├── <a href="././S05-Multiplications-Entieres/Ex-2a-S07-Multiplication-posee.pdf">Ex-2a-S07-Multiplication-posee.pdf</a><br>
+	│   └── <a href="././S05-Multiplications-Entieres/Ex-4a-S07-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-4a-S07-Problèmes.pdf</a><br>
+	├── <a href="././S06-Positions-relatives-de-droites/">S06-Positions-relatives-de-droites</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/01.FM-6-S09.pdf">01.FM-6-S09.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/6_E06_Droites_paralleles_perpendiculaires.pdf">6_E06_Droites_paralleles_perpendiculaires.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/Activit%FFFFFFC3%FFFFFFA9_1_construction_para_perp.pdf">Activité_1_construction_para_perp.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/Activit%FFFFFFC3%FFFFFFA9_2_construction_para_perp.pdf">Activité_2_construction_para_perp.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/exercice-suppl%FFFFFFC3%FFFFFFA9mentaires-paralleles-perpendiculaires.pdf">exercice-supplémentaires-paralleles-perpendiculaires.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/FA1-6-S09-definitions.pdf">FA1-6-S09-definitions.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/FA2-6-S09-constructions-1.pdf">FA2-6-S09-constructions-1.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/FA3-6-S09-mediatrice.pdf">FA3-6-S09-mediatrice.pdf</a><br>
+	│   └── <a href="././S06-Positions-relatives-de-droites/FA4-6-S09-triangle-rectangle.pdf">FA4-6-S09-triangle-rectangle.pdf</a><br>
+	├── <a href="././S07-Divisions-Euclidiennes/">S07-Divisions-Euclidiennes</a><br>
+	│   ├── <a href="././S07-Divisions-Euclidiennes/mathsenligne/">mathsenligne</a><br>
+	│   ├── <a href="././S07-Divisions-Euclidiennes/Cours-S07-Multiplications-Divisions.pdf">Cours-S07-Multiplications-Divisions.pdf</a><br>
+	│   ├── <a href="././S07-Divisions-Euclidiennes/DS-1-S07-Multiplication-Division.pdf">DS-1-S07-Multiplication-Division.pdf</a><br>
+	│   ├── <a href="././S07-Divisions-Euclidiennes/Ex-1a-S07-Tables-de-multiplications.pdf">Ex-1a-S07-Tables-de-multiplications.pdf</a><br>
+	│   ├── <a href="././S07-Divisions-Euclidiennes/Ex-1a-S07-Tables-de-multiplications-v2.pdf">Ex-1a-S07-Tables-de-multiplications-v2.pdf</a><br>
+	│   ├── <a href="././S07-Divisions-Euclidiennes/Ex-1b-S07-Tables-de-multiplications.pdf">Ex-1b-S07-Tables-de-multiplications.pdf</a><br>
+	│   ├── <a href="././S07-Divisions-Euclidiennes/Ex-2a-S07-Multiplication-posee.pdf">Ex-2a-S07-Multiplication-posee.pdf</a><br>
+	│   ├── <a href="././S07-Divisions-Euclidiennes/Ex-3a-S07-Divisons.pdf">Ex-3a-S07-Divisons.pdf</a><br>
+	│   ├── <a href="././S07-Divisions-Euclidiennes/Ex-4a-S07-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-4a-S07-Problèmes.pdf</a><br>
+	│   ├── <a href="././S07-Divisions-Euclidiennes/ex-division-decimales_01.pdf">ex-division-decimales_01.pdf</a><br>
+	│   └── <a href="././S07-Divisions-Euclidiennes/pblm-6-div.pdf">pblm-6-div.pdf</a><br>
 	├── <a href="././S08-Rapporteur/">S08-Rapporteur</a><br>
 	│   ├── <a href="././S08-Rapporteur/cours-Rapporteur.pdf">cours-Rapporteur.pdf</a><br>
 	│   ├── <a href="././S08-Rapporteur/Cours-S08-Rapporteurs.pdf">Cours-S08-Rapporteurs.pdf</a><br>
@@ -135,6 +121,28 @@
 	│   ├── <a href="././S10-Operations-decimaux/FA-03-S03-Soustractions-decimales-trou.pdf">FA-03-S03-Soustractions-decimales-trou.pdf</a><br>
 	│   ├── <a href="././S10-Operations-decimaux/FA-05-S03-Problemes-1.pdf">FA-05-S03-Problemes-1.pdf</a><br>
 	│   └── <a href="././S10-Operations-decimaux/FM-S03-Op%FFFFFFC3%FFFFFFA9rations-sur-les-nombres-d%FFFFFFC3%FFFFFFA9cimaux.pdf">FM-S03-Opérations-sur-les-nombres-décimaux.pdf</a><br>
+	├── <a href="././S10-Perimetres-Aires/">S10-Perimetres-Aires</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Cours-S06-Perimetres.pdf">Cours-S06-Perimetres.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-1a-Conversions_01.pdf">Ex-1a-Conversions_01.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-1a-Conversions_02.pdf">Ex-1a-Conversions_02.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-1a-Conversions_03.pdf">Ex-1a-Conversions_03.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-1a-Conversions_04.pdf">Ex-1a-Conversions_04.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-1a-Conversions_05.pdf">Ex-1a-Conversions_05.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-1a-Conversions.pdf">Ex-1a-Conversions.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-2a-S06-Duree.pdf">Ex-2a-S06-Duree.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-3a-S06-Perimetres.pdf">Ex-3a-S06-Perimetres.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-3b-S06-Perimetres-formules.pdf">Ex-3b-S06-Perimetres-formules.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-3c-S06-Perimetres-formules.pdf">Ex-3c-S06-Perimetres-formules.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-3d-S06-Perimetres-formules.pdf">Ex-3d-S06-Perimetres-formules.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-4a-S06-Aires.pdf">Ex-4a-S06-Aires.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-4b-S06-Aires-Figures.pdf">Ex-4b-S06-Aires-Figures.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-4c-S06-Aires-Figures.pdf">Ex-4c-S06-Aires-Figures.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-5a-S06-Aires.pdf">Ex-5a-S06-Aires.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-5b-S06-Aires.pdf">Ex-5b-S06-Aires.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-6a-S06-Aires-Formules.pdf">Ex-6a-S06-Aires-Formules.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-6b-S06-Aires-Formules.pdf">Ex-6b-S06-Aires-Formules.pdf</a><br>
+	│   ├── <a href="././S10-Perimetres-Aires/Ex-6c-S06-Aires-Formules.pdf">Ex-6c-S06-Aires-Formules.pdf</a><br>
+	│   └── <a href="././S10-Perimetres-Aires/Ex-6d-S06-Aires-Formules.pdf">Ex-6d-S06-Aires-Formules.pdf</a><br>
 	└── <a href="././S10-tableaux-graphiques/">S10-tableaux-graphiques</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S10-tableaux-graphiques/FA-6-S05/">FA-6-S05</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S10-tableaux-graphiques/FM-6-S05/">FM-6-S05</a><br>
