--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -43,7 +43,7 @@
 	│   └── <a href="././S02-Notions-de-Geometrie/EX-5-.pdf">EX-5-.pdf</a><br>
 	├── <a href="././S03-Operations-entiers/">S03-Operations-entiers</a><br>
 	│   ├── <a href="././S03-Operations-entiers/Cours-6-S02-Calculs-Poses.pdf">Cours-6-S02-Calculs-Poses.pdf</a><br>
-	│   ├── <a href="././S03-Operations-entiers/Ex-00-S02-Additions-Soustrctions-Entiers.pdf">Ex-00-S02-Additions-Soustrctions-Entiers.pdf</a><br>
+	│   ├── <a href="././S03-Operations-entiers/Ex-00-S02-Additions-Soustractions-Entiers.pdf">Ex-00-S02-Additions-Soustractions-Entiers.pdf</a><br>
 	│   ├── <a href="././S03-Operations-entiers/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
 	│   ├── <a href="././S03-Operations-entiers/FA-02-S03-Soustractions-decimales.pdf">FA-02-S03-Soustractions-decimales.pdf</a><br>
 	│   ├── <a href="././S03-Operations-entiers/FA-03-S03-Additions-decimales-trou.pdf">FA-03-S03-Additions-decimales-trou.pdf</a><br>
@@ -75,17 +75,19 @@
 	│   ├── <a href="././S05-Multiplications-Entieres/Ex-1a-S07-Tables-de-multiplications-v2.pdf">Ex-1a-S07-Tables-de-multiplications-v2.pdf</a><br>
 	│   ├── <a href="././S05-Multiplications-Entieres/Ex-1b-S07-Tables-de-multiplications.pdf">Ex-1b-S07-Tables-de-multiplications.pdf</a><br>
 	│   ├── <a href="././S05-Multiplications-Entieres/Ex-2a-S07-Multiplication-posee.pdf">Ex-2a-S07-Multiplication-posee.pdf</a><br>
-	│   └── <a href="././S05-Multiplications-Entieres/Ex-4a-S07-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-4a-S07-Problèmes.pdf</a><br>
+	│   ├── <a href="././S05-Multiplications-Entieres/Ex-4a-S07-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-4a-S07-Problèmes.pdf</a><br>
+	│   ├── <a href="././S05-Multiplications-Entieres/grille_multiplication_0202_001.1722378286.pdf">grille_multiplication_0202_001.1722378286.pdf</a><br>
+	│   ├── <a href="././S05-Multiplications-Entieres/regles_multiplication_0516_25_questions_001.1494298958.pdf">regles_multiplication_0516_25_questions_001.1494298958.pdf</a><br>
+	│   └── <a href="././S05-Multiplications-Entieres/regles_multiplication_0520_25_questions_001.1494298940.pdf">regles_multiplication_0520_25_questions_001.1494298940.pdf</a><br>
 	├── <a href="././S06-Positions-relatives-de-droites/">S06-Positions-relatives-de-droites</a><br>
-	│   ├── <a href="././S06-Positions-relatives-de-droites/01.FM-6-S09.pdf">01.FM-6-S09.pdf</a><br>
-	│   ├── <a href="././S06-Positions-relatives-de-droites/6_E06_Droites_paralleles_perpendiculaires.pdf">6_E06_Droites_paralleles_perpendiculaires.pdf</a><br>
-	│   ├── <a href="././S06-Positions-relatives-de-droites/Activit%FFFFFFC3%FFFFFFA9_1_construction_para_perp.pdf">Activité_1_construction_para_perp.pdf</a><br>
-	│   ├── <a href="././S06-Positions-relatives-de-droites/Activit%FFFFFFC3%FFFFFFA9_2_construction_para_perp.pdf">Activité_2_construction_para_perp.pdf</a><br>
-	│   ├── <a href="././S06-Positions-relatives-de-droites/exercice-suppl%FFFFFFC3%FFFFFFA9mentaires-paralleles-perpendiculaires.pdf">exercice-supplémentaires-paralleles-perpendiculaires.pdf</a><br>
-	│   ├── <a href="././S06-Positions-relatives-de-droites/FA1-6-S09-definitions.pdf">FA1-6-S09-definitions.pdf</a><br>
-	│   ├── <a href="././S06-Positions-relatives-de-droites/FA2-6-S09-constructions-1.pdf">FA2-6-S09-constructions-1.pdf</a><br>
-	│   ├── <a href="././S06-Positions-relatives-de-droites/FA3-6-S09-mediatrice.pdf">FA3-6-S09-mediatrice.pdf</a><br>
-	│   └── <a href="././S06-Positions-relatives-de-droites/FA4-6-S09-triangle-rectangle.pdf">FA4-6-S09-triangle-rectangle.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/Act_1_construction_para_perp.pdf">Act_1_construction_para_perp.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/Cours-6-S09-Droites-Parallele-Perpendiculaires.pdf">Cours-6-S09-Droites-Parallele-Perpendiculaires.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/EX0-Droites-paralleles-perpendiculaires.pdf">EX0-Droites-paralleles-perpendiculaires.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/EX1-6-S09-definitions.pdf">EX1-6-S09-definitions.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/EX2-6-S09-constructions.pdf">EX2-6-S09-constructions.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/EX3-6-S09-mediatrice.pdf">EX3-6-S09-mediatrice.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/EX4-6-S09-triangle-rectangle.pdf">EX4-6-S09-triangle-rectangle.pdf</a><br>
+	│   └── <a href="././S06-Positions-relatives-de-droites/Exercice-suppl%FFFFFFC3%FFFFFFA9mentaires-paralleles-perpendiculaires.pdf">Exercice-supplémentaires-paralleles-perpendiculaires.pdf</a><br>
 	├── <a href="././S07-Divisions-Euclidiennes/">S07-Divisions-Euclidiennes</a><br>
 	│   ├── <a href="././S07-Divisions-Euclidiennes/mathsenligne/">mathsenligne</a><br>
 	│   ├── <a href="././S07-Divisions-Euclidiennes/Cours-S07-Multiplications-Divisions.pdf">Cours-S07-Multiplications-Divisions.pdf</a><br>
