--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -72,10 +72,13 @@
 	│   ├── <a href="././S05-Pythagore-reciproque/Ex-2-Reciproques.pdf">Ex-2-Reciproques.pdf</a><br>
 	│   └── <a href="././S05-Pythagore-reciproque/Ex-3-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-3-Problèmes.pdf</a><br>
 	├── <a href="././S06-Satistiques/">S06-Satistiques</a><br>
-	│   ├── <a href="././S06-Satistiques/stats-etendues.pdf">stats-etendues.pdf</a><br>
-	│   ├── <a href="././S06-Satistiques/stats-medianes.pdf">stats-medianes.pdf</a><br>
-	│   ├── <a href="././S06-Satistiques/stats-moyennes.pdf">stats-moyennes.pdf</a><br>
-	│   └── <a href="././S06-Satistiques/stats-tout.pdf">stats-tout.pdf</a><br>
+	│   ├── <a href="././S06-Satistiques/DS-1-S06-Etendue.pdf">DS-1-S06-Etendue.pdf</a><br>
+	│   ├── <a href="././S06-Satistiques/DS-2-S06-Frequence.pdf">DS-2-S06-Frequence.pdf</a><br>
+	│   ├── <a href="././S06-Satistiques/Ex-1-S06-Etendue.pdf">Ex-1-S06-Etendue.pdf</a><br>
+	│   ├── <a href="././S06-Satistiques/Ex-2-S06-Frequences.pdf">Ex-2-S06-Frequences.pdf</a><br>
+	│   ├── <a href="././S06-Satistiques/Ex-3-S06-Moyennes.pdf">Ex-3-S06-Moyennes.pdf</a><br>
+	│   ├── <a href="././S06-Satistiques/Ex-4-S06-medianes.pdf">Ex-4-S06-medianes.pdf</a><br>
+	│   └── <a href="././S06-Satistiques/Ex-5-S06-Bilan.pdf">Ex-5-S06-Bilan.pdf</a><br>
 	├── <a href="././S07-Puissances/">S07-Puissances</a><br>
 	│   ├── <a href="././S07-Puissances/ex-puissances-1.pdf">ex-puissances-1.pdf</a><br>
 	│   ├── <a href="././S07-Puissances/ex-puissances-2.pdf">ex-puissances-2.pdf</a><br>
