--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -74,6 +74,7 @@
 	├── <a href="././S06-Satistiques/">S06-Satistiques</a><br>
 	│   ├── <a href="././S06-Satistiques/DS-1-S06-Etendue.pdf">DS-1-S06-Etendue.pdf</a><br>
 	│   ├── <a href="././S06-Satistiques/DS-2-S06-Frequence.pdf">DS-2-S06-Frequence.pdf</a><br>
+	│   ├── <a href="././S06-Satistiques/DS-3-S06-Moyenne.pdf">DS-3-S06-Moyenne.pdf</a><br>
 	│   ├── <a href="././S06-Satistiques/Ex-1-S06-Etendue.pdf">Ex-1-S06-Etendue.pdf</a><br>
 	│   ├── <a href="././S06-Satistiques/Ex-2-S06-Frequences.pdf">Ex-2-S06-Frequences.pdf</a><br>
 	│   ├── <a href="././S06-Satistiques/Ex-3-S06-Moyennes.pdf">Ex-3-S06-Moyennes.pdf</a><br>
