--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -75,9 +75,11 @@
 	│   ├── <a href="././S06-Satistiques/DS-1-S06-Etendue.pdf">DS-1-S06-Etendue.pdf</a><br>
 	│   ├── <a href="././S06-Satistiques/DS-2-S06-Frequence.pdf">DS-2-S06-Frequence.pdf</a><br>
 	│   ├── <a href="././S06-Satistiques/DS-3-S06-Moyenne.pdf">DS-3-S06-Moyenne.pdf</a><br>
+	│   ├── <a href="././S06-Satistiques/DS-4-S06-M%FFFFFFC3%FFFFFFA9diane.pdf">DS-4-S06-Médiane.pdf</a><br>
 	│   ├── <a href="././S06-Satistiques/Ex-1-S06-Etendue.pdf">Ex-1-S06-Etendue.pdf</a><br>
 	│   ├── <a href="././S06-Satistiques/Ex-2-S06-Frequences.pdf">Ex-2-S06-Frequences.pdf</a><br>
-	│   ├── <a href="././S06-Satistiques/Ex-3-S06-Moyennes.pdf">Ex-3-S06-Moyennes.pdf</a><br>
+	│   ├── <a href="././S06-Satistiques/Ex-3a-S06-Moyennes-Simples.pdf">Ex-3a-S06-Moyennes-Simples.pdf</a><br>
+	│   ├── <a href="././S06-Satistiques/Ex-3b-S06-Moyennes-Ponderees.pdf">Ex-3b-S06-Moyennes-Ponderees.pdf</a><br>
 	│   ├── <a href="././S06-Satistiques/Ex-4-S06-medianes.pdf">Ex-4-S06-medianes.pdf</a><br>
 	│   └── <a href="././S06-Satistiques/Ex-5-S06-Bilan.pdf">Ex-5-S06-Bilan.pdf</a><br>
 	├── <a href="././S07-Puissances/">S07-Puissances</a><br>
