--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -82,6 +82,7 @@
 	├── <a href="././S06-Positions-relatives-de-droites/">S06-Positions-relatives-de-droites</a><br>
 	│   ├── <a href="././S06-Positions-relatives-de-droites/Act_1_construction_para_perp.pdf">Act_1_construction_para_perp.pdf</a><br>
 	│   ├── <a href="././S06-Positions-relatives-de-droites/Cours-6-S09-Droites-Parallele-Perpendiculaires.pdf">Cours-6-S09-Droites-Parallele-Perpendiculaires.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/DS-1-S06-Tracer-Perpendiculaires.pdf">DS-1-S06-Tracer-Perpendiculaires.pdf</a><br>
 	│   ├── <a href="././S06-Positions-relatives-de-droites/EX0-Droites-paralleles-perpendiculaires.pdf">EX0-Droites-paralleles-perpendiculaires.pdf</a><br>
 	│   ├── <a href="././S06-Positions-relatives-de-droites/EX1-6-S09-definitions.pdf">EX1-6-S09-definitions.pdf</a><br>
 	│   ├── <a href="././S06-Positions-relatives-de-droites/EX2-6-S09-constructions.pdf">EX2-6-S09-constructions.pdf</a><br>
