--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -88,6 +88,8 @@
 	│   ├── <a href="././S06-Positions-relatives-de-droites/EX2-6-S09-constructions.pdf">EX2-6-S09-constructions.pdf</a><br>
 	│   ├── <a href="././S06-Positions-relatives-de-droites/EX3-6-S09-mediatrice.pdf">EX3-6-S09-mediatrice.pdf</a><br>
 	│   ├── <a href="././S06-Positions-relatives-de-droites/EX4-6-S09-triangle-rectangle.pdf">EX4-6-S09-triangle-rectangle.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/Ex-5a-S06-Figures-Telephonees-Consignes.pdf">Ex-5a-S06-Figures-Telephonees-Consignes.pdf</a><br>
+	│   ├── <a href="././S06-Positions-relatives-de-droites/Ex-5b-S06-Figures-Telephonees-Reponses.pdf">Ex-5b-S06-Figures-Telephonees-Reponses.pdf</a><br>
 	│   └── <a href="././S06-Positions-relatives-de-droites/Exercice-suppl%FFFFFFC3%FFFFFFA9mentaires-paralleles-perpendiculaires.pdf">Exercice-supplémentaires-paralleles-perpendiculaires.pdf</a><br>
 	├── <a href="././S07-Divisions-Euclidiennes/">S07-Divisions-Euclidiennes</a><br>
 	│   ├── <a href="././S07-Divisions-Euclidiennes/mathsenligne/">mathsenligne</a><br>
