--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -83,6 +83,9 @@
 	│   ├── <a href="././S06-Satistiques/Ex-4-S06-medianes.pdf">Ex-4-S06-medianes.pdf</a><br>
 	│   └── <a href="././S06-Satistiques/Ex-5-S06-Bilan.pdf">Ex-5-S06-Bilan.pdf</a><br>
 	├── <a href="././S07-Puissances/">S07-Puissances</a><br>
+	│   ├── <a href="././S07-Puissances/DS-1-S07-Produits-Quotients-Puissances.pdf">DS-1-S07-Produits-Quotients-Puissances.pdf</a><br>
+	│   ├── <a href="././S07-Puissances/Ex-1-S07-Produits-Puissances.pdf">Ex-1-S07-Produits-Puissances.pdf</a><br>
+	│   ├── <a href="././S07-Puissances/Ex-2-S07-Quotients-Puissances.pdf">Ex-2-S07-Quotients-Puissances.pdf</a><br>
 	│   ├── <a href="././S07-Puissances/ex-puissances-1.pdf">ex-puissances-1.pdf</a><br>
 	│   ├── <a href="././S07-Puissances/ex-puissances-2.pdf">ex-puissances-2.pdf</a><br>
 	│   └── <a href="././S07-Puissances/ex-puissances-3.pdf">ex-puissances-3.pdf</a><br>
