--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -69,6 +69,7 @@
 	│   ├── <a href="././S04-Cercle/20.Activit%FFFFFFC3%FFFFFFA9-Perroquet.pdf">20.Activité-Perroquet.pdf</a><br>
 	│   ├── <a href="././S04-Cercle/21.1.Flammant-rose-consigne.pdf">21.1.Flammant-rose-consigne.pdf</a><br>
 	│   ├── <a href="././S04-Cercle/21.2.Flammant-rose-a-remplir.pdf">21.2.Flammant-rose-a-remplir.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/Chapitre 4 - Cercles.pdf">Chapitre 4 - Cercles.pdf</a><br>
 	│   ├── <a href="././S04-Cercle/DS-1-Cercle.odg">DS-1-Cercle.odg</a><br>
 	│   └── <a href="././S04-Cercle/DS-1-Cercle.pdf">DS-1-Cercle.pdf</a><br>
 	├── <a href="././S05-Multiplications-Entieres/">S05-Multiplications-Entieres</a><br>
@@ -150,13 +151,15 @@
 	│   ├── <a href="././S10-Perimetres-Aires/Ex-6b-S06-Aires-Formules.pdf">Ex-6b-S06-Aires-Formules.pdf</a><br>
 	│   ├── <a href="././S10-Perimetres-Aires/Ex-6c-S06-Aires-Formules.pdf">Ex-6c-S06-Aires-Formules.pdf</a><br>
 	│   └── <a href="././S10-Perimetres-Aires/Ex-6d-S06-Aires-Formules.pdf">Ex-6d-S06-Aires-Formules.pdf</a><br>
-	└── <a href="././S10-tableaux-graphiques/">S10-tableaux-graphiques</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S10-tableaux-graphiques/FA-6-S05/">FA-6-S05</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S10-tableaux-graphiques/FM-6-S05/">FM-6-S05</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S10-tableaux-graphiques/FM-6-S05-Version-Eleve/">FM-6-S05-Version-Eleve</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S10-tableaux-graphiques/FA-6-S05.pdf">FA-6-S05.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S10-tableaux-graphiques/FM-6-S05.pdf">FM-6-S05.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S10-tableaux-graphiques/FM-6-S05-VE.pdf">FM-6-S05-VE.pdf</a><br>
+	├── <a href="././S10-tableaux-graphiques/">S10-tableaux-graphiques</a><br>
+	│   ├── <a href="././S10-tableaux-graphiques/FA-6-S05/">FA-6-S05</a><br>
+	│   ├── <a href="././S10-tableaux-graphiques/FM-6-S05/">FM-6-S05</a><br>
+	│   ├── <a href="././S10-tableaux-graphiques/FM-6-S05-Version-Eleve/">FM-6-S05-Version-Eleve</a><br>
+	│   ├── <a href="././S10-tableaux-graphiques/Chapitre 5 - Gestion des donn%FFFFFFC3%FFFFFFA9es.pdf">Chapitre 5 - Gestion des données.pdf</a><br>
+	│   ├── <a href="././S10-tableaux-graphiques/FA-6-S05.pdf">FA-6-S05.pdf</a><br>
+	│   ├── <a href="././S10-tableaux-graphiques/FM-6-S05.pdf">FM-6-S05.pdf</a><br>
+	│   └── <a href="././S10-tableaux-graphiques/FM-6-S05-VE.pdf">FM-6-S05-VE.pdf</a><br>
+	└── <a href="././Chapitre 3 - Fractions.pdf">Chapitre 3 - Fractions.pdf</a><br>
 	<hr>
 </body>
 </html>
