--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -97,6 +97,7 @@
 	├── <a href="././S07-Divisions-Euclidiennes/">S07-Divisions-Euclidiennes</a><br>
 	│   ├── <a href="././S07-Divisions-Euclidiennes/mathsenligne/">mathsenligne</a><br>
 	│   ├── <a href="././S07-Divisions-Euclidiennes/Cours-S07-Multiplications-Divisions.pdf">Cours-S07-Multiplications-Divisions.pdf</a><br>
+	│   ├── <a href="././S07-Divisions-Euclidiennes/DS-1a-S07-Divisions-entieres.pdf">DS-1a-S07-Divisions-entieres.pdf</a><br>
 	│   ├── <a href="././S07-Divisions-Euclidiennes/DS-1-S07-Multiplication-Division.pdf">DS-1-S07-Multiplication-Division.pdf</a><br>
 	│   ├── <a href="././S07-Divisions-Euclidiennes/Ex-1a-S07-Tables-de-multiplications.pdf">Ex-1a-S07-Tables-de-multiplications.pdf</a><br>
 	│   ├── <a href="././S07-Divisions-Euclidiennes/Ex-1a-S07-Tables-de-multiplications-v2.pdf">Ex-1a-S07-Tables-de-multiplications-v2.pdf</a><br>
