--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -87,6 +87,12 @@
 	│   ├── <a href="././S07-Puissances/DS-1-S07-Produits-Quotients-Puissances.pdf">DS-1-S07-Produits-Quotients-Puissances.pdf</a><br>
 	│   ├── <a href="././S07-Puissances/Ex-1-S07-Produits-Puissances.pdf">Ex-1-S07-Produits-Puissances.pdf</a><br>
 	│   ├── <a href="././S07-Puissances/Ex-2-S07-Quotients-Puissances.pdf">Ex-2-S07-Quotients-Puissances.pdf</a><br>
+	│   ├── <a href="././S07-Puissances/Ex-3-S07-Puissances-de-Puissances.pdf">Ex-3-S07-Puissances-de-Puissances.pdf</a><br>
+	│   ├── <a href="././S07-Puissances/Ex-4-S07-Produit-Quotient-de-Meme-Exposant.pdf">Ex-4-S07-Produit-Quotient-de-Meme-Exposant.pdf</a><br>
+	│   ├── <a href="././S07-Puissances/Ex-5-S07-Avec-des-relatifs.pdf">Ex-5-S07-Avec-des-relatifs.pdf</a><br>
+	│   ├── <a href="././S07-Puissances/Ex-6-S07-Ecriture-Decimale-Puissances-de-10.pdf">Ex-6-S07-Ecriture-Decimale-Puissances-de-10.pdf</a><br>
+	│   ├── <a href="././S07-Puissances/Ex-7-S07-Encadrer-par-puissances-de-10.pdf">Ex-7-S07-Encadrer-par-puissances-de-10.pdf</a><br>
+	│   ├── <a href="././S07-Puissances/Ex-8-S07-Ecriture-decimale-puissance-de-10.pdf">Ex-8-S07-Ecriture-decimale-puissance-de-10.pdf</a><br>
 	│   ├── <a href="././S07-Puissances/ex-puissances-1.pdf">ex-puissances-1.pdf</a><br>
 	│   ├── <a href="././S07-Puissances/ex-puissances-2.pdf">ex-puissances-2.pdf</a><br>
 	│   └── <a href="././S07-Puissances/ex-puissances-3.pdf">ex-puissances-3.pdf</a><br>
