--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -84,7 +84,9 @@
 	│   ├── <a href="././S06-Satistiques/Ex-4b-S06-medianes-effectifs.pdf">Ex-4b-S06-medianes-effectifs.pdf</a><br>
 	│   └── <a href="././S06-Satistiques/Ex-5-S06-Bilan.pdf">Ex-5-S06-Bilan.pdf</a><br>
 	├── <a href="././S07-Puissances/">S07-Puissances</a><br>
+	│   ├── <a href="././S07-Puissances/Cours-S07-Puissances.pdf">Cours-S07-Puissances.pdf</a><br>
 	│   ├── <a href="././S07-Puissances/DS-1-S07-Produits-Quotients-Puissances.pdf">DS-1-S07-Produits-Quotients-Puissances.pdf</a><br>
+	│   ├── <a href="././S07-Puissances/DS-2-S07-Puissances-de-Puissances.pdf">DS-2-S07-Puissances-de-Puissances.pdf</a><br>
 	│   ├── <a href="././S07-Puissances/Ex-1-S07-Produits-Puissances.pdf">Ex-1-S07-Produits-Puissances.pdf</a><br>
 	│   ├── <a href="././S07-Puissances/Ex-2-S07-Quotients-Puissances.pdf">Ex-2-S07-Quotients-Puissances.pdf</a><br>
 	│   ├── <a href="././S07-Puissances/Ex-3-S07-Puissances-de-Puissances.pdf">Ex-3-S07-Puissances-de-Puissances.pdf</a><br>
