--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -99,6 +99,9 @@
 	│   ├── <a href="././S07-Puissances/ex-puissances-2.pdf">ex-puissances-2.pdf</a><br>
 	│   └── <a href="././S07-Puissances/ex-puissances-3.pdf">ex-puissances-3.pdf</a><br>
 	├── <a href="././S08-Proportionnalite/">S08-Proportionnalite</a><br>
+	│   ├── <a href="././S08-Proportionnalite/DS1-Prop-Reconnaitre.pdf">DS1-Prop-Reconnaitre.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/DS-1-S09-Problemes.pdf">DS-1-S09-Problemes.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-Livret-Prop-S08-.pdf">Ex-Livret-Prop-S08-.pdf</a><br>
 	│   ├── <a href="././S08-Proportionnalite/FA1-5-S07.pdf">FA1-5-S07.pdf</a><br>
 	│   ├── <a href="././S08-Proportionnalite/FA2-5-S07.pdf">FA2-5-S07.pdf</a><br>
 	│   ├── <a href="././S08-Proportionnalite/FA3-5-S07.pdf">FA3-5-S07.pdf</a><br>
