--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -26,9 +26,6 @@
 <body>
 	<h1>Cours de Maths/Sixieme</h1><p>
 	<a href="https://outerovitch-maths.github.io/">↰</a><br>
-	├── <a href="././00-Utils/">00-Utils</a><br>
-	│   ├── <a href="././00-Utils/Grilles-multiplicatives-a-imprimer.pdf">Grilles-multiplicatives-a-imprimer.pdf</a><br>
-	│   └── <a href="././00-Utils/tables-de-multiplications-a-imprimer.pdf">tables-de-multiplications-a-imprimer.pdf</a><br>
 	├── <a href="././S01-Numeration-entiere/">S01-Numeration-entiere</a><br>
 	│   ├── <a href="././S01-Numeration-entiere/Cours-6-S01-Numeration-entiere.pdf">Cours-6-S01-Numeration-entiere.pdf</a><br>
 	│   ├── <a href="././S01-Numeration-entiere/Ex-1-Numeration-Decomposition.pdf">Ex-1-Numeration-Decomposition.pdf</a><br>
@@ -121,8 +118,15 @@
 	│   ├── <a href="././S08-Rapporteur/pg_97.pdf">pg_97.pdf</a><br>
 	│   ├── <a href="././S08-Rapporteur/pg_98.pdf">pg_98.pdf</a><br>
 	│   └── <a href="././S08-Rapporteur/pg_99.pdf">pg_99.pdf</a><br>
-	├── <a href="././S09-Proportionalite/">S09-Proportionalite</a><br>
-	│   └── <a href="././S09-Proportionalite/DS-1-S09-Problemes.pdf">DS-1-S09-Problemes.pdf</a><br>
+	├── <a href="././S09-Proportionnalite/">S09-Proportionnalite</a><br>
+	│   ├── <a href="././S09-Proportionnalite/DS-1-S09-Problemes.pdf">DS-1-S09-Problemes.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA1-5-S07.pdf">FA1-5-S07.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA2-5-S07.pdf">FA2-5-S07.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA3-5-S07.pdf">FA3-5-S07.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA5-5-S07.pdf">FA5-5-S07.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA6-5-S07.pdf">FA6-5-S07.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA7-5-S07.pdf">FA7-5-S07.pdf</a><br>
+	│   └── <a href="././S09-Proportionnalite/FM-5-S07.pdf">FM-5-S07.pdf</a><br>
 	├── <a href="././S10-Operations-decimaux/">S10-Operations-decimaux</a><br>
 	│   ├── <a href="././S10-Operations-decimaux/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
 	│   ├── <a href="././S10-Operations-decimaux/FA-02-S03-Soustractions-decimales.pdf">FA-02-S03-Soustractions-decimales.pdf</a><br>
