--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -120,12 +120,22 @@
 	│   └── <a href="././S08-Rapporteur/pg_99.pdf">pg_99.pdf</a><br>
 	├── <a href="././S09-Proportionnalite/">S09-Proportionnalite</a><br>
 	│   ├── <a href="././S09-Proportionnalite/DS-1-S09-Problemes.pdf">DS-1-S09-Problemes.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/Ex4-Prop-Coefficient.pdf">Ex4-Prop-Coefficient.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA10-5-S07.pdf">FA10-5-S07.pdf</a><br>
 	│   ├── <a href="././S09-Proportionnalite/FA1-5-S07.pdf">FA1-5-S07.pdf</a><br>
-	│   ├── <a href="././S09-Proportionnalite/FA2-5-S07.pdf">FA2-5-S07.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA1-5-S11.pdf">FA1-5-S11.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA2-5-S11.pdf">FA2-5-S11.pdf</a><br>
 	│   ├── <a href="././S09-Proportionnalite/FA3-5-S07.pdf">FA3-5-S07.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA3-5-S11.pdf">FA3-5-S11.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA4-5-S11.pdf">FA4-5-S11.pdf</a><br>
 	│   ├── <a href="././S09-Proportionnalite/FA5-5-S07.pdf">FA5-5-S07.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA5-5-S11.pdf">FA5-5-S11.pdf</a><br>
 	│   ├── <a href="././S09-Proportionnalite/FA6-5-S07.pdf">FA6-5-S07.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA6-5-S11.pdf">FA6-5-S11.pdf</a><br>
 	│   ├── <a href="././S09-Proportionnalite/FA7-5-S07.pdf">FA7-5-S07.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA7-5-S11.pdf">FA7-5-S11.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA8-5-S11.pdf">FA8-5-S11.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/FA9-5-S07.pdf">FA9-5-S07.pdf</a><br>
 	│   └── <a href="././S09-Proportionnalite/FM-5-S07.pdf">FM-5-S07.pdf</a><br>
 	├── <a href="././S10-Operations-decimaux/">S10-Operations-decimaux</a><br>
 	│   ├── <a href="././S10-Operations-decimaux/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
