--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -119,7 +119,10 @@
 	│   ├── <a href="././S08-Rapporteur/pg_98.pdf">pg_98.pdf</a><br>
 	│   └── <a href="././S08-Rapporteur/pg_99.pdf">pg_99.pdf</a><br>
 	├── <a href="././S09-Proportionnalite/">S09-Proportionnalite</a><br>
-	│   ├── <a href="././S09-Proportionnalite/DS-1-S09-Problemes.pdf">DS-1-S09-Problemes.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/Cours-Proportionnalite.pdf">Cours-Proportionnalite.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/DS-1-Reconnaitre-une-situation.pdf">DS-1-Reconnaitre-une-situation.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/DS-2-S09-Coeff-Produit-en-croix.pdf">DS-2-S09-Coeff-Produit-en-croix.pdf</a><br>
+	│   ├── <a href="././S09-Proportionnalite/DS-3-Problemes.pdf">DS-3-Problemes.pdf</a><br>
 	│   ├── <a href="././S09-Proportionnalite/Ex4-Prop-Coefficient.pdf">Ex4-Prop-Coefficient.pdf</a><br>
 	│   ├── <a href="././S09-Proportionnalite/FA10-5-S07.pdf">FA10-5-S07.pdf</a><br>
 	│   ├── <a href="././S09-Proportionnalite/FA1-5-S07.pdf">FA1-5-S07.pdf</a><br>
@@ -135,8 +138,7 @@
 	│   ├── <a href="././S09-Proportionnalite/FA7-5-S07.pdf">FA7-5-S07.pdf</a><br>
 	│   ├── <a href="././S09-Proportionnalite/FA7-5-S11.pdf">FA7-5-S11.pdf</a><br>
 	│   ├── <a href="././S09-Proportionnalite/FA8-5-S11.pdf">FA8-5-S11.pdf</a><br>
-	│   ├── <a href="././S09-Proportionnalite/FA9-5-S07.pdf">FA9-5-S07.pdf</a><br>
-	│   └── <a href="././S09-Proportionnalite/FM-5-S07.pdf">FM-5-S07.pdf</a><br>
+	│   └── <a href="././S09-Proportionnalite/FA9-5-S07.pdf">FA9-5-S07.pdf</a><br>
 	├── <a href="././S10-Operations-decimaux/">S10-Operations-decimaux</a><br>
 	│   ├── <a href="././S10-Operations-decimaux/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
 	│   ├── <a href="././S10-Operations-decimaux/FA-02-S03-Soustractions-decimales.pdf">FA-02-S03-Soustractions-decimales.pdf</a><br>
