--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -102,16 +102,27 @@
 	│   ├── <a href="././S07-Puissances/ex-puissances-3.pdf">ex-puissances-3.pdf</a><br>
 	│   └── <a href="././S07-Puissances/Utils-Prefixes-et-puissances-de-10.pdf">Utils-Prefixes-et-puissances-de-10.pdf</a><br>
 	├── <a href="././S08-Proportionnalite/">S08-Proportionnalite</a><br>
-	│   ├── <a href="././S08-Proportionnalite/DS1-Prop-Reconnaitre.pdf">DS1-Prop-Reconnaitre.pdf</a><br>
-	│   ├── <a href="././S08-Proportionnalite/DS-1-S09-Problemes.pdf">DS-1-S09-Problemes.pdf</a><br>
-	│   ├── <a href="././S08-Proportionnalite/Ex-Livret-Prop-S08-.pdf">Ex-Livret-Prop-S08-.pdf</a><br>
-	│   ├── <a href="././S08-Proportionnalite/FA1-5-S07.pdf">FA1-5-S07.pdf</a><br>
-	│   ├── <a href="././S08-Proportionnalite/FA2-5-S07.pdf">FA2-5-S07.pdf</a><br>
-	│   ├── <a href="././S08-Proportionnalite/FA3-5-S07.pdf">FA3-5-S07.pdf</a><br>
-	│   ├── <a href="././S08-Proportionnalite/FA5-5-S07.pdf">FA5-5-S07.pdf</a><br>
-	│   ├── <a href="././S08-Proportionnalite/FA6-5-S07.pdf">FA6-5-S07.pdf</a><br>
-	│   ├── <a href="././S08-Proportionnalite/FA7-5-S07.pdf">FA7-5-S07.pdf</a><br>
-	│   └── <a href="././S08-Proportionnalite/FM-5-S07.pdf">FM-5-S07.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/00.Livret-Proportionnalite.pdf">00.Livret-Proportionnalite.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Cours-Proportionnalite.pdf">Cours-Proportionnalite.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/DS-1-Reconnaitre-une-situation.pdf">DS-1-Reconnaitre-une-situation.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/DS-2-S09-Coeff-Produit-en-croix.pdf">DS-2-S09-Coeff-Produit-en-croix.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/DS-3-Problemes.pdf">DS-3-Problemes.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-1a-Tables-Multiplications.pdf">Ex-1a-Tables-Multiplications.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-1b-Multiplications-a-trous.pdf">Ex-1b-Multiplications-a-trous.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-1c-Divisions.pdf">Ex-1c-Divisions.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-2a-Reconnaitre.pdf">Ex-2a-Reconnaitre.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-3a-Reconnaitre.pdf">Ex-3a-Reconnaitre.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-3b-Reconnaitre.pdf">Ex-3b-Reconnaitre.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-3c-Reconnaitre.pdf">Ex-3c-Reconnaitre.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-4a-Passage-unite.pdf">Ex-4a-Passage-unite.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-4b-Passage-unite.pdf">Ex-4b-Passage-unite.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-4c-Coefficient.pdf">Ex-4c-Coefficient.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-5a-Produit-en-Croix.pdf">Ex-5a-Produit-en-Croix.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-5b-Produit-en-Croix.pdf">Ex-5b-Produit-en-Croix.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-6a-Linearite.pdf">Ex-6a-Linearite.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-6b-Linearite.pdf">Ex-6b-Linearite.pdf</a><br>
+	│   ├── <a href="././S08-Proportionnalite/Ex-6c-Linearite.pdf">Ex-6c-Linearite.pdf</a><br>
+	│   └── <a href="././S08-Proportionnalite/Ex-7a-Resolution-Probleme.pdf">Ex-7a-Resolution-Probleme.pdf</a><br>
 	├── <a href="././S09-Perimetres-Aires/">S09-Perimetres-Aires</a><br>
 	│   ├── <a href="././S09-Perimetres-Aires/Ex1a-Perimetre.pdf">Ex1a-Perimetre.pdf</a><br>
 	│   ├── <a href="././S09-Perimetres-Aires/Ex1b-Perimetre.pdf">Ex1b-Perimetre.pdf</a><br>
