--- a/Utils/index.html
+++ b/Utils/index.html
@@ -26,6 +26,9 @@
 <body>
 	<h1>Cours de Maths/Utils</h1><p>
 	<a href="https://outerovitch-maths.github.io/">↰</a><br>
+	├── <a href="././DNL/">DNL</a><br>
+	│   ├── <a href="././DNL/00.Key-Vocab.pdf">00.Key-Vocab.pdf</a><br>
+	│   └── <a href="././DNL/Lesson-Proportionality.pdf">Lesson-Proportionality.pdf</a><br>
 	├── <a href="././Fiche d%FFFFFFC3%FFFFFFA9claration Heures suppl%FFFFFFC3%FFFFFFA9mentaires .pdf">Fiche déclaration Heures supplémentaires .pdf</a><br>
 	├── <a href="././Grilles-multiplicatives-a-imprimer.pdf">Grilles-multiplicatives-a-imprimer.pdf</a><br>
 	├── <a href="././suivi corrections a3.pdf">suivi corrections a3.pdf</a><br>
